--- a/doc/tutorial/quickstart.Rmd
+++ b/doc/tutorial/quickstart.Rmd
@@ -13,6 +13,8 @@ library(ParamHelpers)
 obj.fun = rastrigin_function(1)
 ```
 
+**Note:** Since all this stuff here is under heavy developement it might be neccessary to install the github developement version of the ParamHelpers package via the ```devtools::install_github``` function.
+
 We decide ourself to use kriging as our surrgate model. Furthermore we use Expected Improvement (EI) as the infill criterion, i. e., the criterion which determines which point(s) of the objective function should be evaluated in further iterations (keep in mind, that using EI as the infill criterion needs the learner to support standard error estimation). Initially we let mbo generate an initial design of 30 points (the default algorithm is maximinLHS from package lhs).
 
 ```{r}
